<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/space_1x"
    android:orientation="vertical"
    android:padding="@dimen/space_4x"
    tools:context=".views.authorization.AuthorizationActivity">

    <ProgressBar
        android:id="@+id/progress"
        style="@style/Widget.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        tools:visibility="visible" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/feat_main_authorization_new_authorization" />

    <EditText
        android:id="@+id/id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/feat_main_authorization_id"
        android:inputType="text"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/commerce_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/feat_main_authorization_commerceCode"
        android:inputType="text"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/terminal_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/feat_main_authorization_terminalCode"
        android:inputType="text"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/feat_main_authorization_amount"
        android:inputType="text"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/feat_main_authorization_card"
        android:inputType="text"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/transaction_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/feat_main_authorization_authorize_transaction" />

</LinearLayout>

